feat: add builders for tests and subscription controller/module
